<resources>
    <string name="app_name">SmackChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="OpenNavigation">Open</string>
    <string name="CloseNavigation">Close Navigation Drawer</string>
    <string name="john_sina">John Sina</string>
    <string name="john_gmail">john@gmail.com</string>
    <string name="message">Message:</string>
    <string name="btnSendDesc">backgroundImageForSendButton</string>
    <string name="please_log_in">Please Log In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="background_image_to_add_channel">background image to add channel</string>
    <string name="user_name">User Name</string>
    <string name="password">password</string>
    <string name="tab_to_generate_user_avatar">Tab to generate user avatar</string>
    <string name="generate_background_colour">Generate Background Colour</string>
    <string name="create_user">Create User</string>
    <string name="background_image_to_avatar">background_image_to_avatar</string>
    <string name="text_logout">Logout</string>
    <string name="add_channel">Add Channel</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="email">email</string>
</resources>
